--- a/jinshu-storage/Cargo.toml
+++ b/jinshu-storage/Cargo.toml
@@ -11,7 +11,16 @@ repository = "https://github.com/gengteng/jinshu"
 edition = "2021"
 
 [dependencies]
-#tokio = { version = "~1.16.1", features = ["full"] }
-#sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite"]}
-#mongodb = "2"
-#anyhow = "1"
+jinshu-common = { path = "../jinshu-common" }
+jinshu-tracing = { path = "../jinshu-tracing" }
+jinshu-queue = { path = "../jinshu-queue" }
+jinshu-database = { path = "../jinshu-database" }
+jinshu-protocol = { path = "../jinshu-protocol" }
+jinshu-utils = { path = "../jinshu-utils" }
+async-trait = "0.1"
+serde_json = "1.0"
+tracing = "0.1"
+serde = { version = "1", features = ["derive"] }
+tokio = { version = "~1.16.1", features = ["full"] }
+sea-orm = { version = "0.5", features = ["sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls"], default-features = false }
+anyhow = "1"
