--- a/jinshu-sdk/Cargo.toml
+++ b/jinshu-sdk/Cargo.toml
@@ -16,14 +16,21 @@ jinshu-protocol = { path = "../jinshu-protocol" }
 futures = "0.3"
 tokio = { version = "~1.16.1", features = ["full"] }
 tokio-util = { version = "0.6", features = ["codec"]}
-#reqwest = { version = "0.11", features = ["serde_json"]}
+reqwest = { version = "0.11", features = ["serde_json"]}
 anyhow = "1"
 clap = "3"
 mime = "0.3"
 log = "0.4"
 env_logger = "0.9"
+url = { version = "2.2", features = ["serde"] }
+serde = { version = "1", features = ["derive"] }
 uuid = { version = "1.0.0-alpha.1", features = ["serde", "v4", "fast-rng"]}
+thiserror = "1.0"
+dashmap = "5.1"
+
+[dev-dependencies]
+jinshu-common = { path = "../jinshu-common" }
 
 [[bin]]
-path = "src/client.rs"
+path = "src/cli.rs"
 name = "jinshu-cli"
