--- a/conf/app.toml
+++ b/conf/app.toml
@@ -3,3 +3,8 @@ ip = "0.0.0.0"
 port = 8765
 gateway_host = "127.0.0.1"
 gateway_port = 9200
+
+[app_client]
+user_count = 3
+server_host = "localhost"
+server_port = 8765
