--- a/jinshu-authorizer/Cargo.toml
+++ b/jinshu-authorizer/Cargo.toml
@@ -19,7 +19,7 @@ jinshu-redis = { path = "../jinshu-redis" }
 tracing = { version = "0.1"}
 anyhow = "1"
 uuid = { version = "1.0.0-alpha.1", features = ["serde", "v4", "fast-rng"]}
-tokio = { version = "~1.16.1", features = ["full"]}
+tokio = { version = "1.17", features = ["full"]}
 tonic = "0.6"
 deadpool-redis = "0.10"
 serde_json = "1"
