--- a/jinshu-gateway/Cargo.toml
+++ b/jinshu-gateway/Cargo.toml
@@ -16,7 +16,7 @@ jinshu-redis = { path = "../jinshu-redis" }
 jinshu-database = { path = "../jinshu-database" }
 jinshu-common = { path = "../jinshu-common" }
 jinshu-tracing = { path = "../jinshu-tracing"}
-tokio = { version = "~1.16.1", features = ["full"]}
+tokio = { version = "1.17", features = ["full"]}
 axum = "0.4"
 tower-http = { version = "0.2", features = ["trace"] }
 uuid = { version = "1.0.0-alpha.1", features = ["serde", "v4", "fast-rng"]}
