--- a/jinshu-receiver/Cargo.toml
+++ b/jinshu-receiver/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "~1.16.1", features = ["full"]}
+tokio = { version = "1.17", features = ["full"]}
 jinshu-common = { path = "../jinshu-common" }
 jinshu-rpc = { path = "../jinshu-rpc" }
 jinshu-utils = { path = "../jinshu-utils" }
@@ -23,7 +23,7 @@ futures = "0.3"
 tonic = "0.6"
 anyhow = "1"
 url = "2.2"
-config = "0.11"
+config = "0.12"
 tracing = "0.1"
 serde = { version = "1", features = ["derive"] }
 rdkafka = { version = "0.28", features = ["cmake-build"] }
