--- a/jinshu-sdk/Cargo.toml
+++ b/jinshu-sdk/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2021"
 jinshu-utils = { path = "../jinshu-utils" }
 jinshu-protocol = { path = "../jinshu-protocol" }
 futures = "0.3"
-tokio = { version = "~1.16.1", features = ["full"] }
+tokio = { version = "1.17", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"]}
 reqwest = { version = "0.11", features = ["serde_json"]}
 anyhow = "1"
