--- a/jinshu-storage/Cargo.toml
+++ b/jinshu-storage/Cargo.toml
@@ -21,6 +21,6 @@ async-trait = "0.1"
 serde_json = "1.0"
 tracing = "0.1"
 serde = { version = "1", features = ["derive"] }
-tokio = { version = "~1.16.1", features = ["full"] }
+tokio = { version = "1.17", features = ["full"] }
 sea-orm = { version = "0.6", features = ["sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls"], default-features = false }
 anyhow = "1"
